[gd_scene load_steps=6 format=2]

[ext_resource path="res://StudentDialogManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Student.gd" type="Script" id=2]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://DialogueButton.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="Student" type="MarginContainer"]
light_mask = -2147483646
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
custom_constants/margin_right = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
Button = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
light_mask = 2
margin_right = 1024.0
margin_bottom = 768.0
color = Color( 0.145098, 0.129412, 0.0196078, 1 )

[node name="StudentDialogManager" parent="." instance=ExtResource( 1 )]
dialog_file = "res://student.json"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
light_mask = 2
margin_right = 1024.0
margin_bottom = 768.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
light_mask = 2
margin_right = 1024.0
margin_bottom = 768.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.639216, 0.647059, 0.603922, 1 )
bbcode_enabled = true
bbcode_text = "<insert text here>"
text = "<insert text here>"
selection_enabled = true
[connection signal="dialog_finished" from="StudentDialogManager" to="." method="_on_StudentDialogManager_dialog_finished"]
[connection signal="new_choice" from="StudentDialogManager" to="." method="_on_StudentDialogManager_new_choice"]
[connection signal="new_speech" from="StudentDialogManager" to="." method="_on_StudentDialogManager_new_speech"]
